[package]
name = "my-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
    "standalone",
] }
egui_plot = "0.31"
num = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
members = ["xtask"]
